--- a/templates/default/_header.html.twig
+++ b/templates/default/_header.html.twig
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
     <div class="container">
         <a href="/" class="navbar-brand" title="v{{ app_version }}">
-            <img src="{{ cdn_veaf }}/img/site-logo.png" class="logo-navbar">
+            <img src="{{ cdn_url }}/img/site-logo.png" class="logo-navbar">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
