--- a/templates/recruitment/_add-activity.html.twig
+++ b/templates/recruitment/_add-activity.html.twig
@@ -6,8 +6,8 @@
     </button>
 </div>
 <div class="modal-body">
-    J'ai effectué un vol avec le <i class="fa fa-user-graduate text-primary"></i> cadet <span
-            class="text-primary">{{ user.nickname }}</span>.<br/>
+    J'ai effectué un vol avec le <i class="fa fa-user-graduate cadet"></i> cadet <span
+            class="cadet">{{ user.nickname }}</span>.<br/>
     <br/>
     Je peux ajouter un commentaire qui sera utilisé dans la prise de décision à l'issue de la période d'essai:
 
