--- a/templates/recruitment/_mark-presentation.html.twig
+++ b/templates/recruitment/_mark-presentation.html.twig
@@ -6,7 +6,7 @@
     </button>
 </div>
 <div class="modal-body">
-    J'indique avoir présenté au <i class="fa fa-user-graduate text-primary"></i> cadet {{ user.nickname }} le fonctionnement de l'association, sans avoir oublié de préciser quelles sont nos valeurs et comment se déroule la période d'essai.
+    J'indique avoir présenté au <i class="fa fa-user-graduate cadet"></i> cadet {{ user.nickname }} le fonctionnement de l'association, sans avoir oublié de préciser quelles sont nos valeurs et comment se déroule la période d'essai.
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">
