--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block pageContent %}
     <div class="container pt-3 pb-3 mb-3">
         <div class="row mb-3 ml-1 mr-1 justify-content-center">
-            <div class="col-6">
+            <div class="col-md-6">
                 <div class="card border-secondary mb-3">
                     <div class="card-header">Formulaire de connexion</div>
                     <div class="card-body">
