--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -32,7 +32,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">VEAF</div>
+                <div class="sidebar-brand-text mx-3">{{ website | upper }}</div>
                 <div>{{ app_version }}</div>
             </a>
 
