--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,60 +1,2 @@
 {# public layout #}
-{% extends "base.html.twig" %}
-
-{% block head %}
-    {{ parent() }}
-    <link rel="stylesheet" href="{{ cdn_veaf }}/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/custom.css?version={{ app_version }}{% if app.environment == "dev" %}&t={{ "now"|date("YmdHis") }}{% endif %}">
-
-    {% if google_agent is not empty %}
-        <script type="text/javascript">
-
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', '{{ google_agent }}']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-        </script>
-    {% endif %}
-{% endblock head %}
-{% block header %}
-    {{ render(controller('App\\Controller\\DefaultController::_header')) }}
-{% endblock header %}
-
-{% block pageContent %}
-    <div class="container container-main pt-3">
-        place holder
-    </div>
-{% endblock pageContent %}
-
-{% block footer %}
-    {# <div class="container container-main pt-2 mt-5"> #}
-    <footer id="footer">
-        <div class="row mb-2">
-            <div class="col-lg-12 text-center">
-                Sauf précision contraire, le contenu de ce site est mis à disposition selon les termes<br>
-                de la
-                <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/">
-                    Licence Creative Commons Attribution - Pas d’Utilisation Commerciale - Partage dans les
-                    Mêmes Conditions 3.0 France.
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">
-                © 2004 - 2021 VEAF
-            </div>
-            <div class="col-sm-6">
-                &nbsp;
-            </div>
-            <div class="col-sm-3 text-right">
-                Virtual European Air Force
-            </div>
-        </div>
-    </footer>
-    {# </div> #}
-{% endblock footer %}
+{% extends "website/" ~ website ~ "/layout.html.twig" %}
