--- a/templates/roster/_user_module.html.twig
+++ b/templates/roster/_user_module.html.twig
@@ -8,7 +8,7 @@
 {% endif %}
 {% if userModule.module.withLevel %}
     {% if userModule.level == constant('\App\\Entity\\UserModule::LEVEL_INSTRUCTOR') %}
-        <i class="fa fa-user-tie fa-2x text-primary mr-3"
+        <i class="fa fa-user-tie fa-2x cadet mr-3"
            title="Instructeur"></i>
     {% elseif userModule.level == constant('\App\\Entity\\UserModule::LEVEL_MISSION') %}
         <i class="fa fa-shield-alt fa-2x text-success mr-3"
