--- a/templates/mission-maker/index.html.twig
+++ b/templates/mission-maker/index.html.twig
@@ -101,8 +101,10 @@ $(document).ready(function () {
         var formId=$this.attr('data-form');
         console.log(href);
         $('#'+formId).attr('action', href).submit();
+        setTimeout(function() {
+            $('#'+formId).attr('action', '');
+        }, 1000);
     });
-
 });
 
 </script>
