display password reset link on user view, close #252

--- a/templates/email/layout.html.twig
+++ b/templates/email/layout.html.twig
@@ -14,7 +14,7 @@
         <br/>
         Le Bureau.<br/>
         <br/>
-        <i>Association <b>VEAF</b></i><br/>
+        <i>Association <b>{{ website }}</b></i><br/>
         Site: <a href="https://www.veaf.org/">https://www.veaf.org/</a><br/>
         Forum: <a href="https://community.veaf.org/">https://community.veaf.org/</a><br/>
     {% endblock signature %}
