--- a/templates/email/layout.txt.twig
+++ b/templates/email/layout.txt.twig
@@ -2,7 +2,7 @@ Bonjour,
 
 Ceci est un email automatique, merci de ne pas y répondre.
 
-Une demande de changement de mot de passe a été effectuée sur le site web de la VEAF.
+Une demande de changement de mot de passe a été effectuée sur le site web de la {{ website }}.
 
 Nous vous connaissons sous le pseudo: {{ nickname }}.
 
@@ -16,6 +16,6 @@ Cordialement,
 
 Le Bureau.
 
-Association VEAF
+Association {{ website }}
 Site: https://www.veaf.org/
 Forum: https://community.veaf.org/
