--- a/templates/email/reset.html.twig
+++ b/templates/email/reset.html.twig
@@ -5,7 +5,7 @@
     <br/>
     Ceci est un email automatique, merci de ne pas y répondre.<br/>
     <br/>
-    Une demande de changement de mot de passe a été effectuée sur le site web de la VEAF.<br/>
+    Une demande de changement de mot de passe a été effectuée sur le site web de la {{ website }}.<br/>
     <br/>
     Nous vous connaissons sous le pseudo: <b>{{ nickname }}</b>.<br/>
     <br/>
