--- a/templates/admin/user/view.html.twig
+++ b/templates/admin/user/view.html.twig
@@ -138,6 +138,16 @@
                                 </td>
                             </tr>
                         </table>
+                        {% if user.passwordRequestToken is not null %}
+                            <div class="row">
+                                <div class="col-sm-12 mb-3">
+                                    <div class="alert alert-warning">
+                                        Lien de reset de mot de passe disponible:
+                                        <a href="{{ passwordResetUrl }}">{{ passwordResetUrl }}</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
                         <div class="row">
                             <div class="col-sm-4 mb-3">
                                 <a href="{{ path('admin_user_list') }}" class="btn btn-outline-primary form-control"><i
